Menu icons, broken image

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
   </div>
   </div>
 	<div id="main-content">
-    <h1>Ready to Renovate Your House?</h1>
-    <h2>GET IN TOUCH WITH TEAM BUILDERS LTD NOW</h2>
+    <div id="hero-text">
+      <h1>Ready to Renovate Your House?</h1>
+      <h2>GET IN TOUCH WITH TEAM BUILDERS LTD NOW</h2>
+    </div>
     <div id="main-content-service-selector-wrapper">
       <div id="main-content-service-selector">
         <div id="select-interior" class="menu active"><a href="#interior-remodeling">Interior Remodeling</a></div>
@@ -90,7 +92,7 @@
           <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/pergolas/DJI_0140.JPG" alt="Decks & Pergolas">
+          <img src="images/work/decks/1.JPG" alt="Decks & Pergolas">
         </div>
       </div>  
       <div class="service-card">
@@ -135,60 +137,14 @@
       <h3>SCHEDULE A CONSULTATION WITH A REMODELING CONTRACTOR IN CEDAR FALLS, IA</h3>
       <p style="">Our home remodeler should be the top choice for your home renocation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
+      <br />
+      <a href="/our-process.html" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
       <img src="images/our-process.png" alt="Our Process">
     </div>
   </section>
-  <section class="gradient-banner">
-    <div class="gradient-content">
-      <span>
-        Renovating your home is simple with TEAM Builders LTD
-      </span>
-      <div class="triangle"></div>
-      <a class="btn btn-secondary">Our Process</a>
-    </div>
-  </section>
 
-  <!-- Meet Our Owners -->
-  <section id="meet-our-owners">
-    <h1>Meet Our Owners</h1>
-    <div class="bio">
-      <div class="biobox" id="engels">
-        <div class="biobox-header">
-          <div class="title">
-            <h2>Trevor Engels</h2>
-            <h3>COO/Project Manager</h3>
-          </div>
-          <div class="initials">
-            <p>T.E.</p>
-          </div>
-        </div>
-        <p>"Quality is where it counts. Exceeding the clients' expectations in craftsmanship is the most fulfilling part of my job, and something I aim to do on every project. My motto is to take the time and care to get it done right, never sacrificing quality for productivity. There's nothing better than the customer being 100% satisfied with the product we put out for them, and knowing they hired the right guys for the job."</p>
-      </div>
-      <div class="bio-image">
-        <img src="/images/team/trevor.png">
-      </div>
-    </div>
-    <div class="bio" id="bio-reverse">
-      <div class="biobox">
-        <div class="biobox-header">
-          <div class="title">
-            <h2>Austin Maginnis</h2>
-            <h3>CEO/Sales Manager</h3>
-          </div>
-          <div class="initials">
-            <p>A.M.</p>
-          </div>
-        </div>
-        <p>"It's always a pleasure getting to work with clients on their home remodeling projects. Helping them bring their visions to reality is something I take great pride in. I love showing up at the beginning of a project to capture a client's vision, and then showing up again towards the end of a project and hearing the client say 'this turned out better than I had ever imagined' or 'the construction crew did an incredible job, it's perfect.' It's moments like this where I know our goals and visions for value and client satisfaction have been attained and it's something Trevor and I strive to achieve on every project."</p>
-      </div>
-      <div class="bio-image">
-        <img src="/images/team/austin.png">
-      </div>
-    </div>
-
-  </section>
   <section class="gradient-banner">
     <div class="gradient-content">
       <span>
