media queries, styling cleanup

--- a/about-our-owners.html
+++ b/about-our-owners.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Referral | T.E.A.M. Builders Ltd.</title>
+    <title>About Our Owners | T.E.A.M. Builders Ltd.</title>
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,8 +16,8 @@
     <nav id="navbar"></nav>
         <div class="hero-nav team">
         <div class="hero-nav__inner">
-        <h1>Our Referral Program</h1>
-        <a class="btn btn-primary calendly-scheduler" href="tel:3194818326">Call (319) 481-8326</a>
+        <h1>About Our Owners</h1>
+        <a class="btn btn-primary calendly-scheduler" href="tel:3194818326">We're Here for You!</a>
         </div>
         </div>
     <div class="subpage">
