--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
         </div>
       </div>
-      <div class="service-card my-15">
+      <div class="service-card my-20">
         <div class="service-card-header">
           <h3><a href="/basement-renovations.html">Basement</a></h3>
         </div>
@@ -79,7 +79,7 @@
           <img src="images/work/fencing/fence.png" alt="Fencing">
         </div>
       </div>
-      <div class="service-card my-15">
+      <div class="service-card my-20">
         <div class="service-card-header">
           <h3><a href="/roofing.html">Roofing</a></h3>
         </div>
@@ -87,7 +87,7 @@
           <img src="images/work/roofing/DJI_0665.JPG" alt="Roofing">
         </div>
       </div>
-      <div class="service-card my-15">
+      <div class="service-card" style="margin-right: 20px;">
         <div class="service-card-header">
           <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
         </div>
@@ -114,7 +114,7 @@
           <img src="images/work/shed-houses/farm-shed.png" alt="Shed Houses">
         </div>
       </div>
-      <div class="service-card my-15">
+      <div class="service-card my-20">
         <div class="service-card-header">
           <h3><a href="/Agriculture-commercial-buildings.html">New Construction Link 2</a></h3>
         </div>
