TBL requested edits

--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Learn about our kitchens, bath, and basement/home additions and remodeling services in Cedar Falls, IA</h2>
+  <h2>Learn about our kitchensand basement/home additions and remodeling services in Cedar Falls, IA</h2>
     <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their kitchens, bath, and basement/home additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.
     </p>
     <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
@@ -28,7 +28,7 @@
           <div class="col mr-5">
             <h3>Bring your remodeling vision to life</h3>
             <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations.html" class="green-link">kitchens</a>, <a href="/bathroom-renovations.html" class="green-link">bath</a>, and <a href="/basement-renovations.html" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
-            <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
+            <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
             <div class="feature-container">
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -52,7 +52,7 @@
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Renovation">
-            <img class="our-work-image" src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Renovation">
+            <!-- <img class="our-work-image" src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Renovation"> -->
             <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Renovation with Island">
             <img class="our-work-image" src="/images/work/kitchen-renovations/TEAM2.jpg" alt="New Kitchen Renovation">
           </div>
