--- a/our-work.html
+++ b/our-work.html
@@ -26,7 +26,7 @@
         <div class="col">
           <h2>Interior Renovation</h2>
           <div data-accordion-group>
-            <div class="our-work-accordion" data-accordion>
+            <!-- <div class="our-work-accordion" data-accordion>
               <div data-control>Bathroom Renovations</div>
               <div data-content>
                 <img src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Remodel">
@@ -34,7 +34,7 @@
                 <img src="/images/work/bathroom-renovations/Shower.jpg" alt="Shower 1">
                 <img src="/images/work/bathroom-renovations/shower-2.jpg" alt="Shower 2">
               </div>
-            </div>
+            </div> -->
             <div class="our-work-accordion" data-accordion>
              <div data-control>Basement Renovations</div>
               <div data-content>
