--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     </div>
 	</div>
       <div id="main-content-service-cards-interior">
-      <div class="service-card">
+      <!-- <div class="service-card">
         <div class="service-card-header">
           <h3><a href="/bathroom-renovations.html">Bathroom</a></h3>
         </div>
         <div class="service-card-image">
           <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
         </div>
-      </div>
+      </div> -->
       <div class="service-card my-20">
         <div class="service-card-header">
           <h3><a href="/basement-renovations.html">Basement</a></h3>
