--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <meta property "og:image" content="/images/home/team-builders-logo.png" />
+    <meta property "og:image" content="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" />
     <meta property "og:image:type" content="/image/png" />   
     <meta property "og:image:width" content="250" />  
     <meta property "og:image:height" content="50" />  
@@ -40,8 +40,8 @@
       </div>
     </div>
     <div class="fade">
-      <div><img src="images/work/decks/team-builders-deck.png"></div>
-      <div><img src="/images/work/shed-houses/Website-roofing-final.png"></div>
+      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
+      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
     </div>
 	</div>
       <div id="main-content-service-cards-interior">
