--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="fade">
       <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
-      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png"></div>
+      <div><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/Website-roofing-final.png"></div>
     </div>
 	</div>
       <div id="main-content-service-cards-interior">
@@ -58,7 +58,7 @@
           <h3><a href="/basement-renovations.html">Basement</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/basement-renovations/basement-renovation.png" alt="Basement">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.png" alt="Basement">
         </div>
       </div>
       <div class="service-card">
@@ -66,7 +66,7 @@
           <h3><a href="/kitchen-renovations.html">Kitchen</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen">
         </div>
       </div>  
      </div> 
@@ -76,7 +76,7 @@
           <h3><a href="/fencing.html">Fences</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/fencing/fence.png" alt="Fencing">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing">
         </div>
       </div>
       <div class="service-card my-20">
