--- a/event-venues.html
+++ b/event-venues.html
@@ -38,7 +38,7 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/event-venues/event-venue-1.png">
+            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png">
             <img class="our-work-image" src="/images/work/event-venues/event-venue-2.png">
           </div>
       </div>
