--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -56,13 +56,13 @@
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/decks/1.JPG" alt="Overhead View of Deck">
+            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Overhead View of Deck">
             <img class="our-work-image" src="/images/work/decks/DJI_0140.JPG" alt="New Deck Renovation">
             <img class="our-work-image" src="/images/work/fencing/final-fence.png" alt="Large Backyard Fence">
             <img class="our-work-image" src="/images/work/fencing/fence.png" alt="White Backyard Fence">
             <img class="our-work-image" src="/images/work/pergolas/p1.jpg" alt="Wood Backyard Pergola">
             <img class="our-work-image" src="/images/work/roofing/Roofing_4.png" alt="Roof on Blue House in Cedar Falls, IA">
-            <img class="our-work-image" src="/images/work/roofing/DJI_0665.JPG" alt="Clay Roof">
+            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
           </div>
       </div>
     </div>
