--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h3><a href="/roofing.html">Roofing</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/roofing/DJI_0665.JPG" alt="Roofing">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
         </div>
       </div>
       <div class="service-card" style="margin-right: 20px;">
@@ -92,7 +92,7 @@
           <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/decks/1.JPG" alt="Decks & Pergolas">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks & Pergolas">
         </div>
       </div>  
       <div class="service-card">
@@ -100,7 +100,7 @@
           <h3><a href="/siding.html">Siding</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/siding/siding.png" alt="Siding">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="Siding">
         </div>
       </div> 
      </div> 
@@ -111,7 +111,7 @@
           <h3><a href="/shed-homes-shouses.html">New Construction Link 1</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/shed-houses/farm-shed.png" alt="Shed Houses">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Shed Houses">
         </div>
       </div>
       <div class="service-card my-20">
@@ -119,7 +119,7 @@
           <h3><a href="/Agriculture-commercial-buildings.html">New Construction Link 2</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
         </div>
       </div>
       <div class="service-card">
@@ -127,7 +127,7 @@
           <h3><a href="/event-venues.html">New Construction Link 2</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="images/work/event-venues/event-venue-1.png" alt="Event Venues">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venues">
         </div>
       </div>  
      </div> 
@@ -141,7 +141,7 @@
       <a href="/our-process.html" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
-      <img src="images/our-process.png" alt="Our Process">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process.png" alt="Our Process">
     </div>
   </section>
 
@@ -161,7 +161,7 @@
         <div class="testimonial">
           <div class="quote">
             <h2>Elon Musk</h2>
-            <img src="/images/home/testimonial-quote.png">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
           Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
@@ -170,7 +170,7 @@
         <div class="testimonial">
           <div class="quote">
             <h2>King George III</h2>
-            <img src="/images/home/testimonial-quote.png">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
           Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
@@ -179,7 +179,7 @@
         <div class="testimonial">
           <div class="quote">
             <h2>Austin Maginnis</h2>
-            <img src="/images/home/testimonial-quote.png">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
           I know I work here, but this place is just great.
@@ -188,7 +188,7 @@
         <div class="testimonial">
           <div class="quote">
             <h2>Batman</h2>
-            <img src="/images/home/testimonial-quote.png">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
           Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
@@ -197,7 +197,7 @@
         <div class="testimonial">
           <div class="quote">
             <h2>Ted Mosby</h2>
-            <img src="/images/home/testimonial-quote.png">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
           Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
@@ -206,7 +206,7 @@
         <div class="testimonial">
           <div class="quote">
             <h2>Bill Murray</h2>
-            <img src="/images/home/testimonial-quote.png">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
           Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash it. Much good business very fine labor.
@@ -230,15 +230,15 @@
     <div id="three-reasons">
       <div class="reason">
         <h5>1. A free estimate from a dependable contractor</h5>
-        <img src="/images/home/dependable-contractor.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/dependable-contractor.png">
       </div>
       <div class="reason" id="flip">
         <h5>2. Service tailored to fit your needs, schedule, and budget</h5>
-        <img src="/images/home/tailored-service.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/tailored-service.png">
       </div>
       <div class="reason">
         <h5>3. Access to high quality parts to help your house</h5>
-        <img src="/images/home/high-quality-parts.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/high-quality-parts.png">
       </div>
     </div>
     <p style="text-align: center;">Don't delay your project any longer. Contact us today to get your free estimate from a home remodeler in Cedar Falls, IA.</p>
