--- a/process.html
+++ b/process.html
@@ -30,7 +30,7 @@
           </p>
         </div>
         <div class="col">
-          <img src="/images/our-process.png" alt="T.E.A.M. Builders' Process">
+          <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process.png" alt="T.E.A.M. Builders' Process">
         </div>
     </div>
     <br />
