--- a/shed-homes.html
+++ b/shed-homes.html
@@ -32,7 +32,7 @@
             <img class="our-work-image" src="/images/work/shed-houses/shed-homes-image-01.jpg" alt="Shed Frame During Construction">
             <img class="our-work-image" src="/images/work/shed-houses/shed-homes-image-02.png" alt="Shed Frame During Construction">
             <img class="our-work-image" src="/images/work/shed-houses/red-shed.png" alt="Red Shed">
-            <img class="our-work-image" src="/images/work/shed-houses/farm-shed.png" alt="Farm Shed">
+            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
             <img class="our-work-image" src="/images/work/shed-houses/shed-homes-image-03.png" alt="Shed Building">
           </div>
       </div>
