--- a/siding.html
+++ b/siding.html
@@ -67,7 +67,7 @@ Will protect your home from the elements</p>
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/siding/siding.png" alt="New Blue Siding">
+            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Blue Siding">
             <img class="our-work-image" src="/images/work/siding/Siding_1.jpg" alt="Siding 1">
             <img class="our-work-image" src="/images/work/siding/Siding_2.png" alt="Siding 2">
             <img class="our-work-image" src="/images/work/siding/Siding_3.jpg" alt="Siding 3">
