--- a/about-our-owners.html
+++ b/about-our-owners.html
@@ -38,7 +38,7 @@
         <p>"Quality is where it counts. Exceeding the clients' expectations in craftsmanship is the most fulfilling part of my job, and something I aim to do on every project. My motto is to take the time and care to get it done right, never sacrificing quality for productivity. There's nothing better than the customer being 100% satisfied with the product we put out for them, and knowing they hired the right guys for the job."</p>
       </div>
       <div class="bio-image">
-        <img src="/images/team/trevor.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team/trevor.png">
       </div>
     </div>
     <div class="bio" id="bio-reverse">
@@ -55,7 +55,7 @@
         <p>"It's always a pleasure getting to work with clients on their home remodeling projects. Helping them bring their visions to reality is something I take great pride in. I love showing up at the beginning of a project to capture a client's vision, and then showing up again towards the end of a project and hearing the client say 'this turned out better than I had ever imagined' or 'the construction crew did an incredible job, it's perfect.' It's moments like this where I know our goals and visions for value and client satisfaction have been attained and it's something Trevor and I strive to achieve on every project."</p>
       </div>
       <div class="bio-image">
-        <img src="/images/team/austin.png">
+        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team/austin.png">
       </div>
     </div>
   </section>
