--- a/our-work.html
+++ b/our-work.html
@@ -70,7 +70,7 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Roofing</div>
               <div data-content>
-                <img src="/images/work/roofing/DJI_0665.JPG" alt="Clay Roof">
+                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
                 <img src="/images/work/roofing/r-1.jpg" alt="Roof 1">
                 <img src="/images/work/roofing/r-2.jpg" alt="Roof 2">
                 <img src="/images/work/roofing/r-3.jpg" alt="Roof 3">
@@ -83,7 +83,7 @@
              <div data-control>Decks</div>
               <div data-content>
                 <img src="/images/work/decks/DJI_0140.JPG" alt="New Deck Renovation">
-                <img src="/images/work/decks/1.JPG" alt="Overhead View of Deck">
+                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Overhead View of Deck">
                 <img src="/images/work/decks/IMG_0574.JPG" alt="Porch Deck">
                 <img src="/images/work/decks/Night-1.jpg" alt="Night View of Deck">
                 <img src="/images/work/decks/pp13.jpg" alt="Large Backyard Multilevel Deck">
@@ -102,7 +102,7 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
-                <img src="/images/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
+                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
                 <img src="/images/work/siding/Siding_1.jpg" alt="Siding Blue House">
                 <img src="/images/work/siding/Siding_2.png" alt="Siding Beige House">
                 <img src="/images/work/siding/Siding_3.jpg" alt="Siding Tan House">
@@ -118,7 +118,7 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Shed Houses "Shouses"</div>
               <div data-content>
-                <img src="/images/work/shed-houses/farm-shed.png" alt="Farm Shed">
+                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
                 <img src="/images/work/shed-houses/shed-loft.png" alt="Shed Loft">
                 <img src="/images/work/shed-houses/red-shed.png" alt="Red Shed">
               </div>
@@ -128,13 +128,13 @@
               <div data-content>
                 <img src="/images/work/commercial/7.png" alt="Agricultural Building">
                 <img src="/images/work/commercial/9.png" alt="Agricultural Building">
-                <img src="/images/work/commercial/farm-shed.png" alt="Farm Shed">
+                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Event Venues</div>
               <div data-content>
-                <img src="/images/work/event-venues/event-venue-1.png" alt="Event Venue 1">
+                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
                 <img src="/images/work/event-venues/event-venue-2.png" alt="Event Venue 2">
               </div>
             </div>
