replace images with s3 images

--- a/fencing.html
+++ b/fencing.html
@@ -68,9 +68,9 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/fencing/1557250048495_fence_4.png" alt="Fence">
-            <img class="our-work-image" src="/images/work/fencing/nichols-fence.png" alt="Nichols Fence">
-            <img class="our-work-image" src="/images/work/fencing/final-fence.png" alt="Final Fence">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
           </div>
       </div>
     </div>
