--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -45,7 +45,7 @@
               </div>
           </div>
           <div class="col">
-            <img src="/images/work/kitchen-renovations/TEAM2.jpg" alt="Kitchen Renovation">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Kitchen Renovation">
           </div>
         </div>
           <br />
@@ -54,7 +54,7 @@
             <img class="our-work-image" src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Renovation">
             <!-- <img class="our-work-image" src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Renovation"> -->
             <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Renovation with Island">
-            <img class="our-work-image" src="/images/work/kitchen-renovations/TEAM2.jpg" alt="New Kitchen Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="New Kitchen Renovation">
           </div>
       </div>
     </div>
