--- a/our-work.html
+++ b/our-work.html
@@ -47,7 +47,7 @@
               <div data-content>
                 <img src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen Renovation Island">
                 <img src="/images/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
-                <img src="/images/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
                 <img src="/images/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
               </div>
             </div>
@@ -62,9 +62,9 @@
               <div data-control>Fences</div>
               <div data-content>
                 <img src="/images/work/fencing/fence.png" alt="Fence">
-                <img src="/images/work/fencing/final-fence.png" alt="Final Fence">
-                <img src="/images/work/fencing/nichols-fence.png" alt="Nichols Fence">
-                <img src="/images/work/fencing/1557250048495_fence_4.png" alt="Fence">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
