--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -80,10 +80,10 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Island">
-            <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
-            <img class="our-work-image" src="/images/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
-            <img class="our-work-image" src="/images/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Island">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
           </div>
       </div>
     </div>
