--- a/roofing.html
+++ b/roofing.html
@@ -25,10 +25,10 @@
   <h2>Malarkey Designer Shingles (Class 4)</h2>
   <p>The Windsor® designer shingle offers the look of a traditional cedar shake roof with the fortified durability of NEX® polymer modified asphalt technology to promote superior granule adhesion and extreme weather protection, including Class 4 impact resistance. This product also features Scotchgard™ Protector from 3M for added protection against black streaks caused by algae.</p>
   <br />
-  <img src="/images/work/roofing/Malarkey-Logo.png" alt="Malarkey Logo">
+  <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-Logo.png" alt="Malarkey Logo">
     <div class="row">
     <div class="col mr-5">
-      <img src="/images/work/roofing/Malarkey-img2.jpg" alt="Roofing in Cedar Falls, IA">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-img2.jpg" alt="Roofing in Cedar Falls, IA">
             <h3 class="text-align-left">Windsor&reg; Scotchgard Features & Benefits</h3>
       <div class="feature-container">
         <div class="feature">
@@ -56,49 +56,49 @@
     <div class="col">
           <div data-accordion-group>
             <div class="roofing-accordion" data-accordion>
-              <div data-control><img src="/images/work/roofing/polymer-modified-asphalt.png" alt="NEX Polymer Modified Asphalt">Nex&trade; Polymer Modified Asphalt</div>
+              <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/polymer-modified-asphalt.png" alt="NEX Polymer Modified Asphalt">Nex&trade; Polymer Modified Asphalt</div>
               <div data-content>
                 <p>Sustainable, polymer modified asphalt technology increases shingle flexibility, granule adhesion, and impact resistance</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/scotchgard.png" alt="Scotchgard Protector">Scotchgard&trade; Protector: Help Prevent Black Streaks</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/scotchgard.png" alt="Scotchgard Protector">Scotchgard&trade; Protector: Help Prevent Black Streaks</div>
               <div data-content>
                 <p>Resists alage staining and helps maintain the aesthetic appearance of your roof. Includes Limited Lifetime Warranty.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/protect-from-extreme-weather.png" alt="Protect From Extreme Weather">Protect from Extreme Weather</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/protect-from-extreme-weather.png" alt="Protect From Extreme Weather">Protect from Extreme Weather</div>
               <div data-content>
                 <p>Class 4 impact resistance offers your roof a high rate of protection</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/retain-color-granules.png" alt="Retain Color Granules">Retain Color Granules</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/retain-color-granules.png" alt="Retain Color Granules">Retain Color Granules</div>
               <div data-content>
                 <p>A blend of algae resistant granules helps maintain the aesthetic appearance of your roof. Includes a 12-year AR warranty.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/roofing-sealants.png" alt="Roofing Sealants">Seal to Roof</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/roofing-sealants.png" alt="Roofing Sealants">Seal to Roof</div>
               <div data-content>
                 <p>Specially formulated asphalt sealant holds shingles in place during high winds</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/superior-shingle-strength.png" alt="Superior Shingle Strength">Superior Shingle Strength</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/superior-shingle-strength.png" alt="Superior Shingle Strength">Superior Shingle Strength</div>
               <div data-content>
                 <p>Shingles with Nex&reg; polymer modified asphalt are more resistance to tearing and nail pull-out, reducing the risk of shingle blow-off</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/flexible-all-weather.png" alt="Flexible in All Weather">Flexible in All Weather</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/flexible-all-weather.png" alt="Flexible in All Weather">Flexible in All Weather</div>
               <div data-content>
                 <p>Asphalt technology provides flexibility for application in a wider range of climates and roof styles</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/wind-warranties.png" alt="Wind Warranties">Wind Warranties</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/wind-warranties.png" alt="Wind Warranties">Wind Warranties</div>
               <div data-content>
                 <p>110 mph Limited Wind Warranty included. Eligible for a 140 mph Enhanced Wind Warranty when additional standards are met.</p>
               </div>
@@ -106,12 +106,12 @@
         </div>
     </div>
   </div>
-  <img src="/images/work/roofing/designer-shingles.png" alt="Designer Shingle Options" style="width: 100%";>
+  <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/designer-shingles.png" alt="Designer Shingle Options" style="width: 100%";>
   <br />
   <h2>Vista&reg; Shingles</h2>
   <div class="row">
     <div class="col mr-5">
-      <img src="/images/work/roofing/Malarkey-img4.jpg" alt="Roofing in Cedar Falls, IA">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-img4.jpg" alt="Roofing in Cedar Falls, IA">
       <h3 class="text-align-left">Vista&reg; Shingle Line Features & Benefits</h3>
       <div class="feature-container">
         <div class="feature">
@@ -147,67 +147,67 @@
     <div class="col">
           <div data-accordion-group>
             <div class="roofing-accordion" data-accordion>
-              <div data-control><img src="/images/work/roofing/polymer-modified-asphalt.png" alt="NEX Polymer Modified Asphalt">Nex&trade; Polymer Modified Asphalt</div>
+              <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/polymer-modified-asphalt.png" alt="NEX Polymer Modified Asphalt">Nex&trade; Polymer Modified Asphalt</div>
               <div data-content>
                 <p>Sustainable, polymer modified asphalt technology increases shingle flexibility, granule adhesion, and impact resistance</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/extreme-weather-protect.png" alt="Protect From Extreme Weather">Protect from Extreme Weather</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/extreme-weather-protect.png" alt="Protect From Extreme Weather">Protect from Extreme Weather</div>
               <div data-content>
                 <p>Class 3 impact resistance offers your roof a high rate of protection</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/streak-resist-technology.png" alt="Streak Resist Technology">Streak Resist&trade; Technology</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/streak-resist-technology.png" alt="Streak Resist Technology">Streak Resist&trade; Technology</div>
               <div data-content>
                 <p>A blend of algae resistant granules helps maintain the aesthetic appearance of your roof. Includes a 12-year AR warranty.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/retain-color-granules.png" alt="Retain Color Granules">Retain Color Granules</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/retain-color-granules.png" alt="Retain Color Granules">Retain Color Granules</div>
               <div data-content>
                 <p>Superior granule adhesion provides your roof lasting beauty and protection from damaging solar rays</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/formulate-roofing-sealants.png" alt="Formulated Roofing Sealants">Formulated Roofing Sealants</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/formulate-roofing-sealants.png" alt="Formulated Roofing Sealants">Formulated Roofing Sealants</div>
               <div data-content>
                 <p>Specially formulataed asphalt sealant holds shingles in place during high winds and rain sealants protect from wind-driven rain.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/wind-warranties.png" alt="Wind Warranties">Wind Warranties</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/wind-warranties.png" alt="Wind Warranties">Wind Warranties</div>
               <div data-content>
                 <p>110 mph Limited Wind Warranty. Eligible for 130 mph Enhanced Wind Warranty when additional standards are met.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-              <div data-control><img src="/images/work/roofing/superior-shingle-strength.png" alt="Superior Shingle Strength">Superior Shingle Strength</div>
+              <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/superior-shingle-strength.png" alt="Superior Shingle Strength">Superior Shingle Strength</div>
               <div data-content>
                 <p>Shingles with NEX polymer modified asphalt are more resistance to tearing and nail pull-out, reducing the risk of shingle blow-off.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/the-zone.png" alt="The Zone: Improve Fastener Placement">The Zone &reg;: Improve Fastener Placement</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/formulate-roofing-sealants.png" alt="The Zone: Improve Fastener Placement">The Zone &reg;: Improve Fastener Placement</div>
               <div data-content>
                 <p>The Zone &reg; nailing area dramatically improves correct fastener placement during installation.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/weather-flexibility.png" alt="Flexible in All Weather">Flexible in All Weather</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/weather-flexibility.png" alt="Flexible in All Weather">Flexible in All Weather</div>
               <div data-content>
                 <p>Asphalt technology provides flexibility for application in a wider range of climates and and roof styles.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/reflect-solar-rays.png" alt="Reflect Damaging Solar Rays">Reflect Damaging Solar Rays</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/reflect-solar-rays.png" alt="Reflect Damaging Solar Rays">Reflect Damaging Solar Rays</div>
               <div data-content>
                 <p>Vista &reg; Sienne Blend and Silverwood shingles relfect solar rays which may reduce the heat entering your home and extend the life of your roof.</p>
               </div>
             </div>
             <div class="roofing-accordion" data-accordion>
-             <div data-control><img src="/images/work/roofing/wind-warranties.png" alt="Wind Warranties">Wind Warranties</div>
+             <div data-control><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/wind-warranties.png" alt="Wind Warranties">Wind Warranties</div>
               <div data-content>
                 <p>110 mph Limited Wind Warranty. Eligible for 130 mph Enhanced Wind Warranty when additional standards are met.</p>
               </div>
@@ -215,7 +215,7 @@
         </div>
     </div>
   </div>
-  <img src="/images/work/roofing/architectural-shingles-1.png" alt="Shingle Options" style="width: 100%";>
+  <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/architectural-shingles-1.png" alt="Shingle Options" style="width: 100%";>
       <div class="text-align-left">
         <br />
         <h2>Get started on your roof installation project in Cedar Falls, IA</h2>
@@ -229,7 +229,7 @@
               <br />
     <div class="row">
       <div class="col mr-5">
-       <img src="/images/work/roofing/r-3.jpg">
+       <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg">
       </div>
       <div class="col">
         <h4>Avoid water damage and annoying insect infestations</h4>
@@ -254,13 +254,13 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/roofing/DJI__0665.JPG" alt="Clay Tile Roof">
-            <img class="our-work-image" src="/images/work/roofing/r-1.jpg" alt="Roofing">
-            <img class="our-work-image" src="/images/work/roofing/r-2.jpg" alt="Roofing">
-            <img class="our-work-image" src="/images/work/roofing/r-3.jpg" alt="Roofing">
-            <img class="our-work-image" src="/images/work/roofing/Roofing_1.jpg" alt="Roofing">
-            <img class="our-work-image" src="/images/work/roofing/Roofing_4.png" alt="Roofing">
-            <img class="our-work-image" src="/images/work/roofing/DJI_0220.JPG" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Clay Tile Roof">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-1.jpg" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-2.jpg" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_4.png" alt="Roofing">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0220.JPG" alt="Roofing">
           </div>
       </div>
     </div>
