replace images with s3 images

--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -65,10 +65,10 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/decks/DJI_0140.JPG" alt="Drone Shot of Backyard Deck Addition">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/DJI_0140.JPG" alt="Drone Shot of Backyard Deck Addition">
             <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Spacious Backyard Deck Addition">
-            <img class="our-work-image" src="/images/work/decks/pp13.jpg" alt="Multilevel Deck">
-            <img class="our-work-image" src="/images/work/decks/Night-1.jpg" alt="Deck with Stair Lights">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/pp13.jpg" alt="Multilevel Deck">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/Night-1.jpg" alt="Deck with Stair Lights">
           </div>
       </div>
     </div>
