--- a/our-work.html
+++ b/our-work.html
@@ -119,8 +119,8 @@
               <div data-control>Shed Houses "Shouses"</div>
               <div data-content>
                 <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
-                <img src="/images/work/shed-houses/shed-loft.png" alt="Shed Loft">
-                <img src="/images/work/shed-houses/red-shed.png" alt="Red Shed">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
