--- a/pergolas.html
+++ b/pergolas.html
@@ -65,11 +65,11 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/pergolas/p10.jpg" alt="Wood Home Pergola">
-            <img class="our-work-image" src="/images/work/pergolas/p12.jpg" alt="Wood Home Pergola">
-            <img class="our-work-image" src="/images/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
-            <img class="our-work-image" src="/images/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
-            <img class="our-work-image" src="/images/work/pergolas/p4.jpg" alt="Pergola with Shingles and Siding">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p4.jpg" alt="Pergola with Shingles and Siding">
           </div>
       </div>
     </div>
