--- a/process.html
+++ b/process.html
@@ -71,12 +71,12 @@
       </div>
     </div>
     <div class="col">
-      <img src="/images/planning-image.jpg" alt="Plan">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/planning-image.jpg" alt="Plan">
     </div>
   </div>
   <div class="row">
     <div class="col mr-5">
-      <img src="/images/design-image.jpg" alt="Design">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/design-image.jpg" alt="Design">
     </div>
     <div class="col">
       <h2>Design</h2>
@@ -132,7 +132,7 @@
       </div>
     </div>
     <div class="col">
-      <img src="/images/build-image.jpg" alt="Build">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/build-image.jpg" alt="Build">
     </div>
   </div>
     <section class="gradient-banner">
