--- a/shed-homes-shouses.html
+++ b/shed-homes-shouses.html
@@ -41,9 +41,9 @@
           </div> -->
           <h4 class="h1" id="our-work">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
-            <img class="our-work-image" src="/images/work/shed-houses/red-shed.png" alt="Red Shed">
-            <img class="our-work-image" src="/images/work/shed-houses/shed-loft.png" alt="Shed Loft">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
           </div>
       </div>
     </div>
