--- a/shed-homes.html
+++ b/shed-homes.html
@@ -28,12 +28,12 @@
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/shed-houses/create-shedhomes.png" alt="Shed Frame During Construction">
-            <img class="our-work-image" src="/images/work/shed-houses/shed-homes-image-01.jpg" alt="Shed Frame During Construction">
-            <img class="our-work-image" src="/images/work/shed-houses/shed-homes-image-02.png" alt="Shed Frame During Construction">
-            <img class="our-work-image" src="/images/work/shed-houses/red-shed.png" alt="Red Shed">
-            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
-            <img class="our-work-image" src="/images/work/shed-houses/shed-homes-image-03.png" alt="Shed Building">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/create-shedhomes.png" alt="Shed Frame During Construction">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-01.jpg" alt="Shed Frame During Construction">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-02.png" alt="Shed Frame During Construction">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-homes-image-03.png" alt="Shed Building">
           </div>
       </div>
     </div>
