--- a/agriculture-commercial-buildings.html
+++ b/agriculture-commercial-buildings.html
@@ -38,9 +38,9 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/commercial/7.png" alt="Agricultural Building">
-            <img class="our-work-image" src="/images/work/commercial/9.png" alt="Agricultural Building">
-            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/7.png" alt="Agricultural Building">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/9.png" alt="Agricultural Building">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
           </div>
       </div>
     </div>
