--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
         </div>
       </div> -->
-      <div class="service-card my-20">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/basement-renovations.html">Basement</a></h3>
         </div>
