--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>  
      </div> 
      <div id="main-content-service-cards-exterior" class="hidden">
-      <div class="service-card">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/fencing.html">Fences</a></h3>
         </div>
@@ -79,7 +79,7 @@
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing">
         </div>
       </div>
-      <div class="service-card my-20">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/roofing.html">Roofing</a></h3>
         </div>
@@ -87,7 +87,7 @@
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
         </div>
       </div>
-      <div class="service-card" style="margin-right: 20px;">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
         </div>
@@ -106,7 +106,7 @@
      </div> 
 
      <div id="main-content-service-cards-shed-homes" class="hidden">
-      <div class="service-card">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/shed-homes-shouses.html">New Construction Link 1</a></h3>
         </div>
@@ -114,7 +114,7 @@
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Shed Houses">
         </div>
       </div>
-      <div class="service-card my-20">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/Agriculture-commercial-buildings.html">New Construction Link 2</a></h3>
         </div>
