replace images w/ smaller ones

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h3><a href="/basement-renovations.html">Basement</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.png" alt="Basement">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement">
         </div>
       </div>
       <div class="service-card">
