--- a/basement-renovations.html
+++ b/basement-renovations.html
@@ -62,7 +62,7 @@
           <h4 class="h1" id="our-work">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Remodel">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.png" alt="Basement Remodel">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Remodel">
           </div>
       </div>
     </div>
