replace images w/ smaller ones

--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -80,7 +80,7 @@
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Island">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Island">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
