--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h3><a href="/kitchen-renovations.html">Kitchen</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen">
         </div>
       </div>  
      </div> 
