replace shed homes with new construction

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="main-content-service-selector">
         <div id="select-interior" class="menu active"><a href="#interior-remodeling">Interior Remodeling</a></div>
         <div id="select-exterior" class="menu"><a href="#exterior-remodeling">Exterior Remodeling</a></div>
-        <div id="select-shed-homes" class="menu"><a href="#shed-homes">New Construction</a></div>
+        <div id="select-new-construction" class="menu"><a href="#new-construction">New Construction</a></div>
       </div>
     </div>
     <div class="fade">
@@ -105,7 +105,7 @@
       </div> 
      </div> 
 
-     <div id="main-content-service-cards-shed-homes" class="hidden">
+     <div id="main-content-service-cards-new-construction" class="hidden">
       <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/shed-homes-shouses.html">New Construction Link 1</a></h3>
